# Saphir

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
restaurant/: admin.py  forms.py  models.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
restaurant/tamplates/restaurant/: base.html  confirm_delete.html  contacts.html  header.html  history.html  home.html  reservation.html  reservation_list.html  reservation_update.html  reservations_success.html  table_detail.html
static/css/: bootstrap.min.css.map  custom.css
users/: forms.py  models.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: cmg.py  csu.py
users/templates/users/: login.html  register.html  user_detail.html  user_form.html
